--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Online-Voting-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "## How To run * Download pgadmin version 13.2 from `https://www.enterprisedb.com/downloads/postgres-postgresql-downloads`<br> * Run It * Make a new server<br> ### server config `Name : localhost`<br> `Host name/addr : 127.0.0.1`<br> `Port : 5433`<br> `Password : password`<br> HIT SAVE",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/pradhuman1/Online-Voting-backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0"
